--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "multer": "1.4.5-lts.1",
     "mysql2": "^3.9.3",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
