--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.3.7",
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
+    "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
+    "joi": "^17.12.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.3",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
